--- a/OpticalValleyUnite/Classes/UI/Home/View/YQOtherHomeNavView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/YQOtherHomeNavView.xib
@@ -13,45 +13,46 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="8t4-HR-gud">
-            <rect key="frame" x="0.0" y="0.0" width="351" height="91"/>
+            <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wtj-uC-Yg9" customClass="YQOtherHomeNavView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="100" height="91"/>
+                    <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCs-zy-lai">
-                            <rect key="frame" x="30" y="15" width="40" height="40"/>
+                            <rect key="frame" x="37.5" y="12" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="gCs-zy-lai" secondAttribute="height" id="XxC-bs-tKZ"/>
-                                <constraint firstAttribute="height" constant="40" id="fT5-bR-yh6"/>
+                                <constraint firstAttribute="height" constant="25" id="fT5-bR-yh6"/>
                             </constraints>
                             <state key="normal" backgroundImage="all"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rj8-PN-9nB">
-                            <rect key="frame" x="0.0" y="64" width="100" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <rect key="frame" x="0.0" y="42" width="100" height="13.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="gCs-zy-lai" firstAttribute="top" secondItem="wtj-uC-Yg9" secondAttribute="top" constant="15" id="25K-wY-ERH"/>
+                        <constraint firstItem="gCs-zy-lai" firstAttribute="top" secondItem="wtj-uC-Yg9" secondAttribute="top" constant="12" id="25K-wY-ERH"/>
                         <constraint firstItem="rj8-PN-9nB" firstAttribute="leading" secondItem="wtj-uC-Yg9" secondAttribute="leading" id="6sc-Mz-C4b"/>
-                        <constraint firstItem="rj8-PN-9nB" firstAttribute="top" secondItem="gCs-zy-lai" secondAttribute="bottom" constant="9" id="Pl0-Ym-xv3"/>
+                        <constraint firstItem="rj8-PN-9nB" firstAttribute="top" secondItem="gCs-zy-lai" secondAttribute="bottom" constant="5" id="Pl0-Ym-xv3"/>
                         <constraint firstAttribute="trailing" secondItem="rj8-PN-9nB" secondAttribute="trailing" id="PlZ-N7-rvB"/>
                         <constraint firstAttribute="width" constant="100" id="vyS-5g-viW"/>
                         <constraint firstItem="gCs-zy-lai" firstAttribute="centerX" secondItem="wtj-uC-Yg9" secondAttribute="centerX" id="ymm-P5-ODl"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="wtj-uC-Yg9" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="CSF-qY-iTs"/>
                 <constraint firstItem="wtj-uC-Yg9" firstAttribute="leading" secondItem="8t4-HR-gud" secondAttribute="leading" id="Ye9-yJ-pxK"/>
                 <constraint firstAttribute="bottom" secondItem="wtj-uC-Yg9" secondAttribute="bottom" id="wXg-Ly-NBl"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-31.5" y="-264.5"/>
+            <point key="canvasLocation" x="-27" y="-280"/>
         </view>
     </objects>
     <resources>
