--- a/OpticalValleyUnite/Classes/UI/Home/View/YQHomeTopView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/YQHomeTopView.xib
@@ -13,32 +13,32 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="hZs-0R-gzk" customClass="YQHomeTopView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="466" height="83"/>
+            <rect key="frame" x="0.0" y="0.0" width="305" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fh9-eX-Gfd" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="38.5" y="0.0" width="40" height="83"/>
+                    <rect key="frame" x="18" y="0.0" width="40" height="92"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="1dJ-GR-jMP"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IE0-lg-Hmd" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="155" y="0.0" width="40" height="83"/>
+                    <rect key="frame" x="94.5" y="0.0" width="40" height="92"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="NMn-bE-pbz"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g6o-Zy-VPW" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="271.5" y="0.0" width="40" height="83"/>
+                    <rect key="frame" x="170.5" y="0.0" width="40" height="92"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="NUu-ex-G8w"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CNr-LC-OA2" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="388" y="0.0" width="40" height="83"/>
+                    <rect key="frame" x="247" y="0.0" width="40" height="92"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="hgn-vL-gMz"/>
@@ -61,7 +61,13 @@
                 <constraint firstItem="fh9-eX-Gfd" firstAttribute="top" secondItem="hZs-0R-gzk" secondAttribute="top" id="w0V-Kr-ttx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-179" y="62.5"/>
+            <connections>
+                <outlet property="top1BtnView" destination="fh9-eX-Gfd" id="K7h-LZ-Uia"/>
+                <outlet property="top2BtnView" destination="IE0-lg-Hmd" id="O64-n7-Jrs"/>
+                <outlet property="top3BtnView" destination="g6o-Zy-VPW" id="jQi-cg-SFV"/>
+                <outlet property="top4BtnView" destination="CNr-LC-OA2" id="D8L-ox-XMw"/>
+            </connections>
+            <point key="canvasLocation" x="-170.5" y="-60"/>
         </view>
     </objects>
 </document>
