--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
@@ -403,7 +403,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3027.536231884058" y="-121.46739130434784"/>
+            <point key="canvasLocation" x="2914" y="-108"/>
         </scene>
         <!--WorkOrder-->
         <scene sceneID="cT2-oD-UIH">
