--- a/OpticalValleyUnite/Classes/UI/Home/View/YQDefaultHomeNavView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/YQDefaultHomeNavView.xib
@@ -19,7 +19,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="401" height="64"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NIN-1V-2hf">
-                            <rect key="frame" x="12" y="10" width="40" height="54"/>
+                            <rect key="frame" x="12" y="20" width="40" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="r2J-N5-YMY"/>
                             </constraints>
@@ -41,7 +41,7 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="200" id="eBW-Qk-pZo"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <state key="normal" title="项目选择"/>
                             <connections>
                                 <action selector="projectButtonClick:" destination="VMV-14-7Eb" eventType="touchUpInside" id="5To-H4-Z2t"/>
@@ -54,9 +54,8 @@
                         <constraint firstAttribute="trailing" secondItem="wIm-xZ-4ui" secondAttribute="trailing" constant="10" id="EnF-iD-uIW"/>
                         <constraint firstItem="NIN-1V-2hf" firstAttribute="leading" secondItem="3nM-5P-Ohd" secondAttribute="leading" constant="12" id="I7c-fk-aRw"/>
                         <constraint firstItem="KDN-yM-J7i" firstAttribute="centerY" secondItem="3nM-5P-Ohd" secondAttribute="centerY" id="JFd-04-wBC"/>
-                        <constraint firstAttribute="bottom" secondItem="NIN-1V-2hf" secondAttribute="bottom" id="RKH-QE-tfB"/>
                         <constraint firstItem="wIm-xZ-4ui" firstAttribute="centerY" secondItem="3nM-5P-Ohd" secondAttribute="centerY" id="Vd1-iM-MoD"/>
-                        <constraint firstItem="NIN-1V-2hf" firstAttribute="top" secondItem="3nM-5P-Ohd" secondAttribute="top" constant="10" id="e3s-vb-rME"/>
+                        <constraint firstItem="NIN-1V-2hf" firstAttribute="centerY" secondItem="3nM-5P-Ohd" secondAttribute="centerY" id="aMe-HQ-v0m"/>
                         <constraint firstAttribute="bottom" secondItem="KDN-yM-J7i" secondAttribute="bottom" id="h6i-mS-yDg"/>
                     </constraints>
                 </view>
@@ -74,7 +73,7 @@
                 <outlet property="projectBtn" destination="KDN-yM-J7i" id="0we-pQ-lU2"/>
                 <outlet property="weatherBtn" destination="wIm-xZ-4ui" id="HAi-iW-Tm4"/>
             </connections>
-            <point key="canvasLocation" x="-119.5" y="-19"/>
+            <point key="canvasLocation" x="-168" y="-29"/>
         </view>
     </objects>
     <resources>
